stop weird overflow issues

--- a/app/assets/stylesheets/web/controls.scss
+++ b/app/assets/stylesheets/web/controls.scss
@@ -269,7 +269,7 @@
 .flush-xs {
   @media screen and (max-width: 768px) {
     padding: 0 !important;
-    margin: 0 -16px !important;
+    margin: 0 !important;
   }
 }
 
